--- a/Developments/GUI/app/views/login.html
+++ b/Developments/GUI/app/views/login.html
@@ -1,2 +1,18 @@
-<p>This is the about view.</p>
-asdada
+<div class="row">
+<div class="col-md-4 col-md-offset-4">
+    <div class="panel panel-default b-a-0 shadow-box">
+        <div class="panel-heading text-center">
+            <h1 class="display-4">Visual Analytics as a Service</h1>
+            <h5>Login</h5>
+        </div>
+        <div class="panel-body">
+            <button type="button" class="btn btn-block btn-lg btn-havelock-blue" ui-sref="index.main">Continue with Facebook</button>
+        </div>
+    </div>
+    <p class="text-gray-light text-center">
+        <strong>Version 0.1 </strong>
+        <span class="text-gray">&#xA9; 2017. Made by
+        <i class="fa fa-fw fa-heart text-danger"></i> VAaaS Team</span>
+    </p>
+</div>
+</div>
