--- a/Developments/GUI/app/views/main.html
+++ b/Developments/GUI/app/views/main.html
@@ -1,4 +1,23 @@
 <div class="row">
-    <button class="btn btn-primary" type="button">Upload</button>
-    <div id="container"></div>
+<button class="btn btn-primary" type="button" ng-click="save()">Save</button>
+<button class="btn btn-primary" type="button" ng-click="run()">Run</button>
+    <div id="whiteboard" width="100%" style="z-index:-10000;"></div>
+    <!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">{{tempNode.title}}</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 </div>
