--- a/Developments/GUI/app/views/login.html
+++ b/Developments/GUI/app/views/login.html
@@ -6,7 +6,7 @@
             <h5>Login</h5>
         </div>
         <div class="panel-body">
-            <button type="button" class="btn btn-block btn-lg btn-havelock-blue" ui-sref="index.main">Continue with Facebook</button>
+            <button type="button" class="btn btn-block btn-lg btn-havelock-blue" ng-click="fbLogin()">Continue with Facebook</button>
         </div>
     </div>
     <p class="text-gray-light text-center">
