--- a/Developments/GUI/app/views/main.html
+++ b/Developments/GUI/app/views/main.html
@@ -1,7 +1,8 @@
 <div class="row">
+  <button class="btn btn-primary" type="button" ng-click="upload()">Upload</button>
 <button class="btn btn-primary" type="button" ng-click="save()">Save</button>
 <button class="btn btn-primary" type="button" ng-click="run()">Run</button>
-    <div id="whiteboard" width="100%" style="z-index:-10000;"></div>
+    <div id="whiteboard" width="100%" style="z-index:1;"></div>
     <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
