--- a/Developments/GUI/app/views/common/navigator.html
+++ b/Developments/GUI/app/views/common/navigator.html
@@ -49,6 +49,42 @@
   <!-- END Sidebar Header -->
 
   <div class="sidebar-content">
+    <div class="text-center">
+      <button class="btn btn-primary btn-sm" type="button" ng-click="upload()">Upload</button>
+      <button class="btn btn-default btn-sm" type="button" ng-click="save()">Save</button>
+      <button class="btn btn-warning btn-sm" type="button" ng-click="run()">Run</button>
+      <button class="btn btn-danger btn-sm" type="button" ui-sref="login">Logout</button>
+    </div>
+  <div class="sidebar-default-visible small text-uppercase sidebar-section m-t-3 m-b-2">
+    <strong>Uploaded Files</strong>
+  </div>
+
+  <!-- START Tree Sidebar Common -->
+  <ul class="side-menu">
+
+    <li class="draggable primary-submenu" data-title="abc.csv">
+        <a href="../apps/projects-list.html">
+          <div>
+            <div class="nav-label" style="z-index:10000;">abc.csv</div>
+          </div>
+        </a>
+    </li>
+    <li  class="draggable primary-submenu" data-title="def.csv">
+        <a href="../apps/projects-grid.html">
+            <span class="nav-label">def.csv</span>
+        </a>
+    </li>
+    <li  class="draggable primary-submenu" data-title="haha.tsv">
+        <a href="../apps/projects-grid.html">
+            <span class="nav-label">haha.tsv</span>
+        </a>
+    </li>
+
+
+  </ul>
+  <!-- END Tree Sidebar Common  -->
+
+  <div class="sidebar-content">
   <div class="sidebar-default-visible small text-uppercase sidebar-section m-t-3 m-b-2">
     <strong>Tools</strong>
   </div>
@@ -56,59 +92,23 @@
   <!-- START Tree Sidebar Common -->
   <ul class="side-menu">
 
-  <li ui-sref-active="active nested-active" class="primary-submenu has-submenu expanded">
-      <a ui-sref="index.main"  title="Dashboards">
-        <i class="fa fa-th fa-lg"></i><span class="nav-label">I/O</span>
-      </a>
-      <ul class="submenu-level-1">
-        <li ui-sref-active="active has-submenu expanded"  class="draggable" data-title="Input">
-            <a ui-sref="index.main"  title="Dashboards">
-            <span class="nav-label">Input</span>
-            </a>
-        </li>
-        <li class="draggable" data-title="Output">
-            <a href="../widgets/graphs-widgets.html" >
-            <span class="nav-label">Output</span>
-            </a>
-        </li>
-      </ul>
-    </li>
-
-  <li  ui-sref-active="active nested-active expanded"  class="primary-submenu has-submenu expanded">
-  <a ui-sref="index.main"   title="Apps">
-    <i class="fa fa-suitcase fa-lg"></i><span class="nav-label">Machine Learning</span> <i class="fa arrow"></i>
-  </a>
-
-  <ul class="submenu-level-1">
-
-    <li class="active has-submenu expanded">
-        <a href="#">
-        <span class="nav-label">Classification</span> <i class="fa arrow"></i>
+    <li class="draggable primary-submenu" data-title="Map">
+        <a href="../apps/projects-list.html">
+          <div>
+            <div class="nav-label" style="z-index:10000;">Map</div>
+          </div>
         </a>
-            <ul class="submenu-level-2">
-                <li class="draggable" data-title="Averaged Perceptron">
-                    <a href="../apps/projects-list.html">
-                      <div>
-                        <div class="nav-label" style="z-index:10000;">Averaged Perceptron</div>
-                      </div>
-                    </a>
-                </li>
-                <li  class="draggable" data-title="Bayes Point Machine">
-                    <a href="../apps/projects-grid.html">
-                        <span class="nav-label">Bayes Point Machine</span>
-                    </a>
-                </li>
-                <li  class="draggable" data-title="Boosted Decision Tree">
-                    <a href="../apps/projects-grid.html">
-                        <span class="nav-label">Boosted Decision Tree</span>
-                    </a>
-                </li>
-            </ul>
     </li>
-  </ul>
-  </li>
-
-
+    <li  class="draggable primary-submenu" data-title="Reduce">
+        <a href="../apps/projects-grid.html">
+            <span class="nav-label">Reduce</span>
+        </a>
+    </li>
+    <li  class="draggable primary-submenu" data-title="Filter">
+        <a href="../apps/projects-grid.html">
+            <span class="nav-label">Filter</span>
+        </a>
+    </li>
 
 
   </ul>
