--- a/Developments/GUI/app/views/upload.html
+++ b/Developments/GUI/app/views/upload.html
@@ -1,3 +1,5 @@
 <div class="row">
-
+  <h1>File Upload</h1>
+<ng-dropzone class="dropzone" options="dzOptions" callbacks="dzCallbacks" methods="dzMethods"></ng-dropzone>
+<button id="submit-all" class="btn btn-primary btn-lg">upload</button>
 </div>
