--- a/Developments/GUI/app/views/main.html
+++ b/Developments/GUI/app/views/main.html
@@ -1,6 +1,6 @@
 <div class="row">
-  
-    <div id="whiteboard" width="100%" style="z-index:1;"></div>
+
+    <div id="whiteboard" width="100%" style="z-index:1;border:2px solid #ccc;background-color: #fefefe;padding-top: 15px;"></div>
     <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
