GUI: add upload preview file

--- a/Developments/GUI/app/views/modal/view_node.html
+++ b/Developments/GUI/app/views/modal/view_node.html
@@ -20,4 +20,9 @@
           </table>
         </div>
       </div>
+      <div class="modal-footer">
+        <div class="pull-right">
+          <button class="btn btn-success">OK</button>
+        </div>
+      </div>
 </div>
