--- a/Developments/GUI/app/views/csvfile_edit.html
+++ b/Developments/GUI/app/views/csvfile_edit.html
@@ -12,7 +12,7 @@
 	var data;
 	$.ajax({
 	  type: "GET",  
-	  url: “upload.csv",
+	  url: "upload.csv",
 	  dataType: "text",       
 	  success: function(response)  
 	  {
