--- a/Developments/GUI/app/views/common/content.html
+++ b/Developments/GUI/app/views/common/content.html
@@ -1,11 +1,9 @@
 <div class="main-wrap">
   <nav class="navigation" ng-include="'/views/common/navigator.html'"></nav>
   <div class="content">
-    <div class="container">
+    <div class="container-fluid">
+      <div ui-view></div>
 
-      <!-- START Content -->
-      <div ui-view=""></div>
-      <!-- END Content -->
     </div>
   </div>
 
