--- a/Developments/GUI/app/views/csvfile_edit.html
+++ b/Developments/GUI/app/views/csvfile_edit.html
@@ -2,7 +2,7 @@
     <h1>Reading CSV file using jQuery</h1>
 	<div class="well">
 		<div class="row" id="csv-display">
-			
+
 		</div>
 	</div>
   </div>
@@ -11,16 +11,16 @@
   $(document).ready(function(){
 	var data;
 	$.ajax({
-	  type: "GET",  
+	  type: "GET",
 	  url: "upload.csv",
-	  dataType: "text",       
-	  success: function(response)  
+	  dataType: "text",
+	  success: function(response)
 	  {
 		data = $.csv.toArrays(response);
 		generateHtmlTable(data);
-	  }   
+	  }
 	});
-	
+
 	function download_csv(csv, filename) {
 	    var csvFile;
 	    var downloadLink;
@@ -47,27 +47,27 @@
 	function export_table_to_csv(html, filename) {
 		var csv = [];
 		var rows = document.querySelectorAll("table tr");
-		
+
 	    for (var i = 0; i < rows.length; i++) {
 			var row = [], cols = rows[i].querySelectorAll("td, th");
-			
-	        for (var j = 0; j < cols.length; j++) 
+
+	        for (var j = 0; j < cols.length; j++)
 	            row.push(cols[j].innerText);
-	        
-			csv.push(row.join(","));		
+
+			csv.push(row.join(","));
 		}
 
 	    // Download CSV
 	    download_csv(csv.join("\n"), filename);
 	}
 
-	document.querySelector("button").addEventListener("click", function () {
+	$("#btn_done").click(function () {
 	    var html = document.querySelector("table").outerHTML;
-		export_table_to_csv(html, "table.csv");
+		    export_table_to_csv(html, "table.csv");
 	});
 
 	function generateHtmlTable(data) {
-		
+
 		 var html = '<table class="table table-bordered table-striped table-hover table-condensed  text-center" id="DynamicTable">';
 
       if(typeof(data[0]) === 'undefined') {
@@ -84,20 +84,20 @@
 				html += '</th>';
 			});
 			html += '<th>';
-			html += '<button id="addNewRow" class="btn btn-primary btn-sm">Add New Row</button>';
+			html += 'Actions';
 			html += '</th>';
 			html += '</tr>';
 			html += '</thead>';
 			html += '<tbody>';
 		  } else {
 			html += '<tr>';
-			
+
 			$.each(row, function( index, colData ) {
-				
+
 				html += '<td>';
 				html += colData;
 				html += '</td>';
-				
+
 			});
 			html += '</tr>';
 		  }
