--- a/Developments/GUI/app/views/modal/view_node.html
+++ b/Developments/GUI/app/views/modal/view_node.html
@@ -8,7 +8,7 @@
           <div class="form-group">
               <label for="inputEmail3" class="col-sm-3 control-label">Script</label>
               <div class="col-sm-9">
-                  <textarea class="form-control" rows="10"></textarea>
+                  <textarea class="form-control" rows="10" ng-model="script"></textarea>
               </div>
           </div>
         </form>
@@ -22,7 +22,7 @@
       </div>
       <div class="modal-footer">
         <div class="pull-right">
-          <button class="btn btn-success" ng-click="cancel()">OK</button>
+          <button class="btn btn-success" ng-click="submit()">OK</button>
         </div>
       </div>
 </div>
