--- a/Developments/GUI/app/views/main.html
+++ b/Developments/GUI/app/views/main.html
@@ -1,6 +1,10 @@
 <div class="row">
+  <button class="btn btn-danger btn-sm delete_selected_button" style="margin-top:30px;">Delete selected operator / link</button>
+</div>
+<div class="row" id="chart_container">
 
-    <div id="whiteboard" width="100%" style="z-index:1;border:2px solid #ccc;background-color: #fefefe;padding-top: 15px;"></div>
+  <div class="flowchart-container" id="flowchart"></div>
+    <!--<div id="whiteboard" width="100%" style="z-index:1;border:2px solid #ccc;background-color: #fefefe;padding-top: 15px;"></div>-->
     <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
