--- a/Developments/GUI/app/views/modal/view_input.html
+++ b/Developments/GUI/app/views/modal/view_input.html
@@ -4,25 +4,15 @@
     <h4 class="modal-title" id="myModalLabel">{{tempNode.title}}</h4>
   </div>
       <div class="modal-body">
-        <form class="form-horizontal" ng-show="tempNode.title.indexOf('.csv') === -1">
-          <div class="form-group">
-              <label for="inputEmail3" class="col-sm-3 control-label">Script</label>
-              <div class="col-sm-9">
-                  <textarea class="form-control" rows="3"></textarea>
-              </div>
-          </div>
-        </form>
-        <div ng-show="tempNode.title.indexOf('.csv') !== -1">
-          <table  id="datatables-example" class="display table table-striped table-hover table-responsive">
-            <tr ng-repeat="x in tempNode.fileContent track by $index">
-              <td ng-repeat="y in x track by $index">{{ y }}</td>
-            </tr>
-          </table>
+        <button id="addNewRow" class="btn btn-primary btn-sm">Add New Row</button>
+        <div id="csv-display">
+
         </div>
       </div>
       <div class="modal-footer">
         <div class="pull-right">
-          <button class="btn btn-success" ng-click="cancel()">OK</button>
+          <button class="btn btn-success" ng-click="save()">OK</button>
+          <button class="btn btn-warning" ng-click="cancel()">CANCEL</button>
         </div>
       </div>
 </div>
