--- a/Developments/GUI/app/views/login.html
+++ b/Developments/GUI/app/views/login.html
@@ -1,32 +1,30 @@
 <div class="row">
-<div class="col-md-4 col-md-offset-4">
-    <div class="panel panel-default b-a-0 shadow-box">
-        <div class="panel-heading text-center">
-            <h1 class="display-4">Visual Analytics as a Service</h1>
-        </div>
-        <div class="panel-body">
-          <form>
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                </div>
-            </form>
-            <button type="button" class="btn btn-block btn-danger btn-lg" ui-sref="index.main">Login with Email</button>
-            <button type="button" class="btn btn-block btn-lg btn-havelock-blue" ng-click="fbLogin()">Continue with Facebook</button>
+  <div class="col-md-4 col-md-offset-4">
+      <div class="panel panel-default b-a-0 shadow-box">
+          <div class="panel-heading text-center">
+              <h1 class="display-4">Visual Analytics as a Service</h1>
+          </div>
+          <div class="panel-body">
+            <form>
+                  <div class="form-group">
+                      <label for="exampleInputEmail1">Email address</label>
+                      <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                  </div>
+                  <div class="form-group">
+                      <label for="exampleInputPassword1">Password</label>
+                      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                  </div>
+              </form>
+              <button type="button" class="btn btn-block btn-danger btn-lg" ui-sref="index.main">Login with Email</button>
+              <button type="button" class="btn btn-block btn-lg btn-havelock-blue" ng-click="fbLogin()">Continue with Facebook</button>
+              <button type="button" class="btn btn-block btn-lg btn-primary" ui-sref="register">Register</button>
 
-        </div>
-        <div class="panel-footer b-a-0 b-r-a-0">
-            <a ui-sref="register" class="pull-right">Register</a>
-        </div>
-    </div>
-    <p class="text-gray-light text-center">
-        <strong>Version 0.1 </strong>
-        <span class="text-gray">&#xA9; 2017. Made by
-        <i class="fa fa-fw fa-heart text-danger"></i> VAaaS Team</span>
-    </p>
-</div>
+          </div>
+      </div>
+      <p class="text-gray-light text-center">
+          <strong>Version 0.1 </strong>
+          <span class="text-gray">&#xA9; 2017. Made by
+          <i class="fa fa-fw fa-heart text-danger"></i> VAaaS Team</span>
+      </p>
+  </div>
 </div>
