--- a/Developments/GUI/app/views/register.html
+++ b/Developments/GUI/app/views/register.html
@@ -5,23 +5,36 @@
             <h1 class="display-4">Visual Analytics as a Service</h1>
         </div>
         <div class="panel-body">
-          <form>
+            <h3 class="text-center m-b-0">Register</h3>
+            <form>
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                    <label>First Name</label>
+                    <input class="form-control" placeholder="Enter a First Name..." ng-model="userinfo.firstName">
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <label>Last Name</label>
+                    <input class="form-control" placeholder="Enter a Last Name..." ng-model="userinfo.lastName">
                 </div>
+                <div class="form-group">
+                    <label>Password</label>
+                    <input class="form-control" placeholder="Enter a Password..." ng-model="userinfo.password">
+                </div>
+                <div class="form-group">
+                    <label>Repeat Password</label>
+                    <input class="form-control" placeholder="Repeat Password..." ng-model="userinfo.password2">
+                </div>
+                <div class="form-group">
+                    <label>Email</label>
+                    <input class="form-control" placeholder="Enter a Email..." ng-model="userinfo.email">
+                </div>
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox"> Accept Terms &amp; Privacy Policy
+                    </label>
+                </div>
+                <button class="btn m-b-2 btn-block btn-primary" ng-click="register()">Register</button>
             </form>
-            <button type="button" class="btn btn-block btn-danger btn-lg" ui-sref="index.main">Login with Email</button>
-            <button type="button" class="btn btn-block btn-lg btn-havelock-blue" ng-click="fbLogin()">Continue with Facebook</button>
-
         </div>
-        <div class="panel-footer b-a-0 b-r-a-0">
-                    <a ui-sref="register" class="pull-right">Register</a>
-                </div>
     </div>
     <p class="text-gray-light text-center">
         <strong>Version 0.1 </strong>
