Modify the node.js with mysql for add user's account

--- a/Developments/GUI/app/views/register.html
+++ b/Developments/GUI/app/views/register.html
@@ -9,23 +9,27 @@
             <form>
                 <div class="form-group">
                     <label>First Name</label>
-                    <input class="form-control" placeholder="Enter a First Name..." ng-model="userinfo.firstName">
+                    <input class="form-control" placeholder="Enter a First Name..." ng-model="userinfo.first_name">
                 </div>
                 <div class="form-group">
                     <label>Last Name</label>
-                    <input class="form-control" placeholder="Enter a Last Name..." ng-model="userinfo.lastName">
+                    <input class="form-control" placeholder="Enter a Last Name..." ng-model="userinfo.last_name">
+                </div>
+                <div class="form-group">
+                    <label>ID</label>
+                    <input class="form-control" placeholder="Enter a Last Name..." ng-model="userinfo.user_name">
                 </div>
                 <div class="form-group">
                     <label>Password</label>
-                    <input class="form-control" placeholder="Enter a Password..." ng-model="userinfo.password">
+                    <input type="password" class="form-control" placeholder="Enter a Password..." ng-model="userinfo.password">
                 </div>
                 <div class="form-group">
                     <label>Repeat Password</label>
-                    <input class="form-control" placeholder="Repeat Password..." ng-model="userinfo.password2">
+                    <input type="password" class="form-control" placeholder="Repeat Password..." ng-model="password2">
                 </div>
                 <div class="form-group">
                     <label>Email</label>
-                    <input class="form-control" placeholder="Enter a Email..." ng-model="userinfo.email">
+                    <input type="email" class="form-control" placeholder="Enter a Email..." ng-model="userinfo.email_id">
                 </div>
                 <div class="checkbox">
                     <label>
