Multiple CSV file edit

--- a/Developments/GUI/app/views/upload.html
+++ b/Developments/GUI/app/views/upload.html
@@ -2,4 +2,5 @@
   <h1>File Upload</h1>
 <ng-dropzone class="dropzone" options="dzOptions" callbacks="dzCallbacks" methods="dzMethods"></ng-dropzone>
 <button id="submit-all" class="btn btn-primary btn-lg">upload</button>
+<button id="btn-next" class="btn btn-primary btn-lg" ng-click="goNext()">Next</button>
 </div>
