--- a/Developments/GUI/app/views/upload_preview.html
+++ b/Developments/GUI/app/views/upload_preview.html
@@ -4,6 +4,7 @@
 
     <button id="addNewRow" class="btn btn-primary btn-sm">Add New Row</button>
     <button id="btn_done" class="btn btn-warning btn-sm">Done to editing</button>
+    <button id="btn_next" class="btn btn-warning btn-sm">Next</button>
     <div id="csv-display">
 
     </div>
