add options method for api router

--- a/Developments/GUI/app/views/common/navigator.html
+++ b/Developments/GUI/app/views/common/navigator.html
@@ -77,23 +77,110 @@
   <!-- START Tree Sidebar Common -->
   <ul class="side-menu">
 
-    <li class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="Map" data-idx="1" data-mode="tool">
+    <li class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="map" data-idx="1" data-mode="tool">
         <a href="#">
           <div>
             <div class="nav-label" style="z-index:10000;">Map</div>
           </div>
         </a>
     </li>
-    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="Reduce"  data-idx="2" data-mode="tool">
+    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="reduce"  data-idx="2" data-mode="tool">
         <a href="#">
             <span class="nav-label">Reduce</span>
         </a>
     </li>
-    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="Filter"  data-idx="3" data-mode="tool">
+    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="filter"  data-idx="3" data-mode="tool">
         <a href="#">
             <span class="nav-label">Filter</span>
         </a>
     </li>
+    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="extractUsingRegex"  data-idx="3" data-mode="tool">
+        <a href="#">
+            <span class="nav-label">ExtractUsingRegex</span>
+        </a>
+    </li>
+    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="splitUsingRegex"  data-idx="3" data-mode="tool">
+        <a href="#">
+            <span class="nav-label">SplitUsingRegex</span>
+        </a>
+    </li>
+    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="splitUsingDelimiter"  data-idx="3" data-mode="tool">
+        <a href="#">
+            <span class="nav-label">SplitUsingDelimiter</span>
+        </a>
+    </li>
+    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="duplicate"  data-idx="3" data-mode="tool">
+        <a href="#">
+            <span class="nav-label">Duplicate</span>
+        </a>
+    </li>
+    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="mergeWithDelimiter"  data-idx="3" data-mode="tool">
+        <a href="#">
+            <span class="nav-label">MergeWithDelimiter</span>
+        </a>
+    </li>
+    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="filterWithParameter"  data-idx="3" data-mode="tool">
+        <a href="#">
+            <span class="nav-label">FilterWithParameter</span>
+        </a>
+    </li>
+    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="filterUsingRegex"  data-idx="3" data-mode="tool">
+        <a href="#">
+            <span class="nav-label">FilterUsingRegex</span>
+        </a>
+    </li>
+    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="slice"  data-idx="3" data-mode="tool">
+        <a href="#">
+            <span class="nav-label">Slice</span>
+        </a>
+    </li>
+    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="convertTypeTo"  data-idx="3" data-mode="tool">
+        <a href="#">
+            <span class="nav-label">ConvertTypeTo</span>
+        </a>
+    </li>
+    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="addColumn"  data-idx="3" data-mode="tool">
+        <a href="#">
+            <span class="nav-label">AddColumn</span>
+        </a>
+    </li>
+    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="chooseColumn"  data-idx="3" data-mode="tool">
+        <a href="#">
+            <span class="nav-label">ChooseColumn</span>
+        </a>
+    </li>
+    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="flatten"  data-idx="3" data-mode="tool">
+        <a href="#">
+            <span class="nav-label">Flatten</span>
+        </a>
+    </li>
+    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="reduceBy"  data-idx="3" data-mode="tool">
+        <a href="#">
+            <span class="nav-label">ReduceBy</span>
+        </a>
+    </li>
+    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="sortBy"  data-idx="3" data-mode="tool">
+        <a href="#">
+            <span class="nav-label">SortBy</span>
+        </a>
+    </li>
+    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="distinct"  data-idx="3" data-mode="tool">
+        <a href="#">
+            <span class="nav-label">Distinct</span>
+        </a>
+    </li>
+    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="parseUserAgent"  data-idx="3" data-mode="tool">
+        <a href="#">
+            <span class="nav-label">ParseUserAgent</span>
+        </a>
+    </li>
+
+    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="parseDateTime"  data-idx="3" data-mode="tool">
+        <a href="#">
+            <span class="nav-label">ParseDateTime</span>
+        </a>
+    </li>
+
 
 
   </ul>
