--- a/Developments/GUI/app/assets/stylesheets/custom.css
+++ b/Developments/GUI/app/assets/stylesheets/custom.css
@@ -53,13 +53,13 @@ h4 {
 
 #flowchart {
   width: 2000px;
-  height: 2000px;
+  height: 1500px;
   background: white;
 }
 
 #chart_container {
     width: 100%;
-    height: 1000px;
+    height: 100%;
     margin-top: 5px;
     overflow: hidden;
     background: repeating-linear-gradient(
